RESOLVED FIXED70711
[EFL] Fix occurrence of unpainted tile while scrolling by using ewk_tiled_view.
https://bugs.webkit.org/show_bug.cgi?id=70711
Summary [EFL] Fix occurrence of unpainted tile while scrolling by using ewk_tiled_view.
KwangHyuk
Reported 2011-10-24 00:57:08 PDT
The number of visible tiles on viewport does not seem to be calculated properly because of calculation fault. As a result, unpainted area sometimes appears in viewport when ewk_view is an instance of tiled view.
Attachments
Patch. (2.43 KB, patch)
2011-10-24 04:38 PDT, KwangHyuk
no flags
patch. (2.87 KB, patch)
2011-10-25 17:28 PDT, KwangHyuk
abarth: review+
abarth: commit-queue+
Patch. (2.87 KB, patch)
2011-10-25 17:36 PDT, KwangHyuk
abarth: review+
abarth: commit-queue+
patch. (2.87 KB, patch)
2011-10-25 17:41 PDT, KwangHyuk
hyuki.kim: review+
patch. (2.87 KB, patch)
2011-10-25 17:43 PDT, KwangHyuk
no flags
Patch. (2.87 KB, patch)
2011-10-25 18:06 PDT, KwangHyuk
no flags
KwangHyuk
Comment 1 2011-10-24 04:38:22 PDT
KwangHyuk
Comment 2 2011-10-24 18:21:16 PDT
To get a floating point number, any op
KwangHyuk
Comment 3 2011-10-24 18:48:28 PDT
at least one of operatee should be a float number.
Raphael Kubo da Costa (:rakuco)
Comment 4 2011-10-24 19:58:39 PDT
Comment on attachment 112175 [details] Patch. LGTM, but the ChangeLog message looks confusing (your comments in the bug report help explain the fix, but it is still not clear to me what effects this bug was causing).
KwangHyuk
Comment 5 2011-10-24 21:19:53 PDT
> LGTM, but the ChangeLog message looks confusing (your comments in the bug report help explain the fix, but it is still not clear to me what effects this bug was causing). Ok, Thank you for your comment. :-) I will add more detail description for the patch.
KwangHyuk
Comment 6 2011-10-25 17:28:14 PDT
Adam Barth
Comment 7 2011-10-25 17:34:40 PDT
Comment on attachment 112430 [details] patch. View in context: https://bugs.webkit.org/attachment.cgi?id=112430&action=review > Source/WebKit/efl/ChangeLog:8 > + Cast one of operatess to float type when ewk_tiled_backing_store calculate tiles list on viewport. operatess ?
KwangHyuk
Comment 8 2011-10-25 17:36:46 PDT
KwangHyuk
Comment 9 2011-10-25 17:41:50 PDT
KwangHyuk
Comment 10 2011-10-25 17:43:19 PDT
KwangHyuk
Comment 11 2011-10-25 18:06:24 PDT
WebKit Review Bot
Comment 12 2011-10-25 19:10:41 PDT
Comment on attachment 112437 [details] Patch. Clearing flags on attachment: 112437 Committed r98424: <http://trac.webkit.org/changeset/98424>
WebKit Review Bot
Comment 13 2011-10-25 19:10:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.